--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <section id="header">
         <a href="#"><img src="./img/logo.png" class="logo" alt="LOgo"></a>
         <ul id="navbar">
-            <Li><a href=".index.html">Home</a></Li>
+            <Li><a class="active" href=".index.html">Home</a></Li>
             <Li><a href="./shop.html">Shop</a></Li>
             <Li><a href="./blog.html">Blog</a></Li>
             <Li><a href="./About.html">About</a></Li>
             <Li><a href="./Contact.html">Contact</a></Li>
+            <Li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a></Li>
         </ul>
     </section>
     
