hero section done

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             <Li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a></Li>
         </ul>
     </section>
+
+    <section id="hero">
+        <h4>Trade-in-Offer</h4>
+        <h2>Super Value Deals</h2>
+        <h1>On All Products</h1>
+        <p>Save more with coupons & up to 70% off!</p>
+        <button>Shop Now</button>
+    </section>
     
 </body>
 </html>
